--- a/tools/misc/view_dataset.ipynb
+++ b/tools/misc/view_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,13 +99,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c49b2c7d56a34144bee3a18621b54acb",
+       "model_id": "27b9b366ce9e4a5696b916f782c72bc8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -137,6 +137,31 @@
     "    return ZODDataset(dataset_cfg=dataset_cfg, class_names=dataset_class_names, training=False)\n",
     "\n",
     "dataset = get_ZOD_dataset()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "ZodFrame.get_annotation() missing 1 required positional argument: 'project'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/cgriesbacher/thesis/3DTrans/tools/misc/view_dataset.ipynb Cell 8\u001b[0m line \u001b[0;36m5\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/cgriesbacher/thesis/3DTrans/tools/misc/view_dataset.ipynb#X25sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m zod_frames \u001b[39m=\u001b[39m ZodFrames(dataset_root\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m/home/cgriesbacher/thesis/3DTrans/data/zod\u001b[39m\u001b[39m\"\u001b[39m, version\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mmini\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/cgriesbacher/thesis/3DTrans/tools/misc/view_dataset.ipynb#X25sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m zod_frames\u001b[39m.\u001b[39mget_all_ids()\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/cgriesbacher/thesis/3DTrans/tools/misc/view_dataset.ipynb#X25sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m zod_frames[\u001b[39m\"\u001b[39;49m\u001b[39m007674\u001b[39;49m\u001b[39m\"\u001b[39;49m]\u001b[39m.\u001b[39;49mget_annotation()\n",
+      "\u001b[0;31mTypeError\u001b[0m: ZodFrame.get_annotation() missing 1 required positional argument: 'project'"
+     ]
+    }
+   ],
+   "source": [
+    "from zod import ZodFrames\n",
+    "zod_frames = ZodFrames(dataset_root=\"/home/cgriesbacher/thesis/3DTrans/data/zod\", version=\"mini\")\n",
+    "\n",
+    "zod_frames.get_all_ids()\n",
+    "zod_frames[\"007674\"].get_annotation(project=)\n"
    ]
   },
   {
@@ -3853,7 +3878,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.13"
   },
   "orig_nbformat": 4
  },
