add gace training for zod with adapted params

--- a/tools/misc/view_dbinfo.ipynb
+++ b/tools/misc/view_dbinfo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -308,6 +308,325 @@
     "print(df.groupby('class')['num_points_in_gt'].count())\n",
     "\n",
     "df_zod = df.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>class</th>\n",
+       "      <th>path</th>\n",
+       "      <th>gt_idx</th>\n",
+       "      <th>num_points_in_gt</th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>z</th>\n",
+       "      <th>l</th>\n",
+       "      <th>w</th>\n",
+       "      <th>h</th>\n",
+       "      <th>theta</th>\n",
+       "      <th>frame_idx</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Vehicle</td>\n",
+       "      <td>gt_database_full/040370_Vehicle_Car_0.bin</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>154.335000</td>\n",
+       "      <td>-4.351000</td>\n",
+       "      <td>1.140022</td>\n",
+       "      <td>3.500000</td>\n",
+       "      <td>1.636000</td>\n",
+       "      <td>1.450000</td>\n",
+       "      <td>3.124139e+00</td>\n",
+       "      <td>040370</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Vehicle</td>\n",
+       "      <td>gt_database_full/040370_Vehicle_Car_1.bin</td>\n",
+       "      <td>1</td>\n",
+       "      <td>50</td>\n",
+       "      <td>82.933000</td>\n",
+       "      <td>2.595000</td>\n",
+       "      <td>1.018022</td>\n",
+       "      <td>2.985000</td>\n",
+       "      <td>1.800000</td>\n",
+       "      <td>1.613000</td>\n",
+       "      <td>3.141593e+00</td>\n",
+       "      <td>040370</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Vehicle</td>\n",
+       "      <td>gt_database_full/054272_Vehicle_Car_0.bin</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>70.516927</td>\n",
+       "      <td>12.591212</td>\n",
+       "      <td>0.971386</td>\n",
+       "      <td>4.474773</td>\n",
+       "      <td>1.971239</td>\n",
+       "      <td>1.597913</td>\n",
+       "      <td>1.570796e+00</td>\n",
+       "      <td>054272</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Vehicle</td>\n",
+       "      <td>gt_database_full/054272_Vehicle_Car_1.bin</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>231.513762</td>\n",
+       "      <td>12.456078</td>\n",
+       "      <td>2.241478</td>\n",
+       "      <td>4.597074</td>\n",
+       "      <td>1.775822</td>\n",
+       "      <td>1.642218</td>\n",
+       "      <td>3.231671e+00</td>\n",
+       "      <td>054272</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Vehicle</td>\n",
+       "      <td>gt_database_full/054272_Vehicle_Car_2.bin</td>\n",
+       "      <td>2</td>\n",
+       "      <td>16</td>\n",
+       "      <td>80.161246</td>\n",
+       "      <td>-0.920472</td>\n",
+       "      <td>0.418441</td>\n",
+       "      <td>4.528688</td>\n",
+       "      <td>1.821269</td>\n",
+       "      <td>1.500000</td>\n",
+       "      <td>-6.661338e-16</td>\n",
+       "      <td>054272</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     class                                       path  gt_idx  \\\n",
+       "0  Vehicle  gt_database_full/040370_Vehicle_Car_0.bin       0   \n",
+       "1  Vehicle  gt_database_full/040370_Vehicle_Car_1.bin       1   \n",
+       "2  Vehicle  gt_database_full/054272_Vehicle_Car_0.bin       0   \n",
+       "3  Vehicle  gt_database_full/054272_Vehicle_Car_1.bin       1   \n",
+       "4  Vehicle  gt_database_full/054272_Vehicle_Car_2.bin       2   \n",
+       "\n",
+       "   num_points_in_gt           x          y         z         l         w  \\\n",
+       "0                 9  154.335000  -4.351000  1.140022  3.500000  1.636000   \n",
+       "1                50   82.933000   2.595000  1.018022  2.985000  1.800000   \n",
+       "2                 7   70.516927  12.591212  0.971386  4.474773  1.971239   \n",
+       "3                 2  231.513762  12.456078  2.241478  4.597074  1.775822   \n",
+       "4                16   80.161246  -0.920472  0.418441  4.528688  1.821269   \n",
+       "\n",
+       "          h         theta frame_idx  \n",
+       "0  1.450000  3.124139e+00    040370  \n",
+       "1  1.613000  3.141593e+00    040370  \n",
+       "2  1.597913  1.570796e+00    054272  \n",
+       "3  1.642218  3.231671e+00    054272  \n",
+       "4  1.500000 -6.661338e-16    054272  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_zod.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Gaze statistics:\n",
+      "x\n",
+      "ZOD:  count    1292409.000\n",
+      "mean          64.182\n",
+      "std           47.331\n",
+      "min          -33.969\n",
+      "25%           28.917\n",
+      "50%           52.125\n",
+      "75%           86.935\n",
+      "max          339.448\n",
+      "Name: x, dtype: float64\n",
+      "\n",
+      "y\n",
+      "ZOD:  count    1292409.000\n",
+      "mean           5.997\n",
+      "std           24.073\n",
+      "min         -226.391\n",
+      "25%           -4.924\n",
+      "50%            4.803\n",
+      "75%           17.396\n",
+      "max          218.799\n",
+      "Name: y, dtype: float64\n",
+      "\n",
+      "z\n",
+      "ZOD:  count    1292409.000\n",
+      "mean           0.974\n",
+      "std            1.114\n",
+      "min          -24.439\n",
+      "25%            0.542\n",
+      "50%            0.891\n",
+      "75%            1.334\n",
+      "max           30.510\n",
+      "Name: z, dtype: float64\n",
+      "\n",
+      "l\n",
+      "ZOD:  count    1292409.000\n",
+      "mean           3.883\n",
+      "std            2.635\n",
+      "min            0.117\n",
+      "25%            3.582\n",
+      "50%            4.000\n",
+      "75%            4.290\n",
+      "max          167.296\n",
+      "Name: l, dtype: float64\n",
+      "\n",
+      "w\n",
+      "ZOD:  count    1292409.000\n",
+      "mean           1.688\n",
+      "std            0.636\n",
+      "min            0.116\n",
+      "25%            1.733\n",
+      "50%            1.813\n",
+      "75%            1.963\n",
+      "max          101.156\n",
+      "Name: w, dtype: float64\n",
+      "\n",
+      "h\n",
+      "ZOD:  count    1292409.000\n",
+      "mean           1.732\n",
+      "std            0.520\n",
+      "min            0.267\n",
+      "25%            1.500\n",
+      "50%            1.561\n",
+      "75%            1.744\n",
+      "max           48.396\n",
+      "Name: h, dtype: float64\n",
+      "\n",
+      "num_points_in_gt\n",
+      "ZOD:  count    1292409.000\n",
+      "mean         476.658\n",
+      "std         2742.734\n",
+      "min            0.000\n",
+      "25%           14.000\n",
+      "50%           52.000\n",
+      "75%          235.000\n",
+      "max       140205.000\n",
+      "Name: num_points_in_gt, dtype: float64\n",
+      "\n",
+      "ZOD 99% quantile for each class and stat:\n",
+      "x\n",
+      "class\n",
+      "Bicycle       157.306\n",
+      "Pedestrian    145.933\n",
+      "Truck         242.797\n",
+      "Vehicle       218.097\n",
+      "Name: x, dtype: float64\n",
+      "\n",
+      "y\n",
+      "class\n",
+      "Bicycle       51.872\n",
+      "Pedestrian    58.470\n",
+      "Truck         91.912\n",
+      "Vehicle       76.820\n",
+      "Name: y, dtype: float64\n",
+      "\n",
+      "z\n",
+      "class\n",
+      "Bicycle       3.232\n",
+      "Pedestrian    3.548\n",
+      "Truck         7.182\n",
+      "Vehicle       4.545\n",
+      "Name: z, dtype: float64\n",
+      "\n",
+      "l\n",
+      "class\n",
+      "Bicycle        2.494\n",
+      "Pedestrian     1.142\n",
+      "Truck         27.699\n",
+      "Vehicle        6.019\n",
+      "Name: l, dtype: float64\n",
+      "\n",
+      "w\n",
+      "class\n",
+      "Bicycle       1.072\n",
+      "Pedestrian    0.982\n",
+      "Truck         3.652\n",
+      "Vehicle       2.394\n",
+      "Name: w, dtype: float64\n",
+      "\n",
+      "h\n",
+      "class\n",
+      "Bicycle       2.000\n",
+      "Pedestrian    2.000\n",
+      "Truck         4.529\n",
+      "Vehicle       2.661\n",
+      "Name: h, dtype: float64\n",
+      "\n",
+      "num_points_in_gt\n",
+      "class\n",
+      "Bicycle        1294.0\n",
+      "Pedestrian      824.0\n",
+      "Truck         54552.8\n",
+      "Vehicle        4261.0\n",
+      "Name: num_points_in_gt, dtype: float64\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print gaze statistics\n",
+    "stats_list = [\"x\", \"y\", \"z\", \"l\", \"w\", \"h\", \"num_points_in_gt\"]\n",
+    "print(\"\\nGaze statistics:\")\n",
+    "for i in range(len(stats_list)):\n",
+    "    print(stats_list[i])\n",
+    "    print(\"ZOD: \", df_zod[stats_list[i]].describe().round(3))\n",
+    "    print(\"\")\n",
+    "\n",
+    "#calculate 95% quantile\n",
+    "# ZOD\n",
+    "\n",
+    "print(\"ZOD 99% quantile for each class and stat:\")\n",
+    "for i in range(len(stats_list)):\n",
+    "    print(stats_list[i])\n",
+    "    print(df_zod.groupby('class')[stats_list[i]].quantile(0.99).round(3))\n",
+    "    print(\"\")\n"
    ]
   },
   {
