--- a/tools/misc/replace_dets_with_gt.ipynb
+++ b/tools/misc/replace_dets_with_gt.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,6 +261,9 @@
     "    detections_with_gt_boxes = detections.copy()\n",
     "    detections_with_gt_boxes = detections_with_gt_boxes.merge(gt_labels[['gt_id', 'frame_id', 'gt_boxes_lidar']], on=['gt_id', 'frame_id'], how='left', suffixes=('', '_gt'))\n",
     "\n",
+    "    #drop na\n",
+    "    detections_with_gt_boxes = detections_with_gt_boxes.dropna()\n",
+    "\n",
     "    # dict for each frame with keys name, score, boxes_lidar, pred_labels, frame_id\n",
     "    detections_with_gt_boxes_per_frame = {}\n",
     "    for frame_id in detections_with_gt_boxes['frame_id'].unique():\n",
@@ -295,9 +298,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loaded 20564 detections on dataset zod with model trained on avltruck\n"
+     ]
+    }
+   ],
    "source": [
     "folder_name = \"2023-12-18_15-16-02\"     #avltrck -> ZOD\n",
     "\n",
@@ -316,16 +327,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 597/597 [00:02<00:00, 228.70it/s]\n",
-      "100%|██████████| 562/562 [00:01<00:00, 361.14it/s]\n",
-      "100%|██████████| 455/455 [00:00<00:00, 513.93it/s]\n"
+      "100%|██████████| 597/597 [00:02<00:00, 222.54it/s]\n",
+      "100%|██████████| 562/562 [00:01<00:00, 368.90it/s]\n",
+      "100%|██████████| 455/455 [00:00<00:00, 530.41it/s]\n"
      ]
     }
    ],
@@ -384,9 +395,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "store_detections_with_gt_boxes(detections, gt_labels_all, folder_name, split)"
    ]
