--- a/tools/misc/view_infos.ipynb
+++ b/tools/misc/view_infos.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,41 +20,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loaded 900 zod_infos\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "'fov_angle'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m/home/cgriesbacher/thesis/3DTrans/tools/misc/view_infos.ipynb Cell 3\u001b[0m line \u001b[0;36m1\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a225455475f494347227d/home/cgriesbacher/thesis/3DTrans/tools/misc/view_infos.ipynb#W2sdnNjb2RlLXJlbW90ZQ%3D%3D?line=8'>9</a>\u001b[0m fov_angles \u001b[39m=\u001b[39m []\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a225455475f494347227d/home/cgriesbacher/thesis/3DTrans/tools/misc/view_infos.ipynb#W2sdnNjb2RlLXJlbW90ZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39mfor\u001b[39;00m zod_info \u001b[39min\u001b[39;00m zod_infos:\n\u001b[0;32m---> <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a225455475f494347227d/home/cgriesbacher/thesis/3DTrans/tools/misc/view_infos.ipynb#W2sdnNjb2RlLXJlbW90ZQ%3D%3D?line=10'>11</a>\u001b[0m     fov_angles\u001b[39m.\u001b[39mappend(zod_info[\u001b[39m'\u001b[39;49m\u001b[39mfov_angle\u001b[39;49m\u001b[39m'\u001b[39;49m])\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'fov_angle'"
+      "loaded 89926 zod_infos\n"
      ]
     }
    ],
    "source": [
-    "with open('../../data/zod/zod_infos_train_small.pkl', 'rb') as f:\n",
+    "with open('../../data/zod/zod_infos_train_full.pkl', 'rb') as f:\n",
     "#with open('../../data/zod/zod_infos_train_full.pkl', 'rb') as f:\n",
     "    #store as dataframe\n",
     "    zod_infos = pickle.load(f)\n",
     "\n",
     "print('loaded', len(zod_infos), 'zod_infos')\n",
     "\n",
-    "#get all fov angels\n",
-    "fov_angles = []\n",
-    "for zod_info in zod_infos:\n",
-    "    fov_angles.append(zod_info['fov_angle'])\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_det_dict = {}\n",
+    "for info in zod_infos:\n",
+    "    num_det = len(info[\"annos\"][\"name\"])\n",
+    "    frame_id = info[\"point_cloud\"][\"lidar_idx\"]\n",
+    "    if num_det in num_det_dict:\n",
+    "        num_det_dict[num_det] +=  [frame_id]\n",
+    "    else:\n",
+    "        num_det_dict[num_det] = [frame_id]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2764"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(num_det_dict[0])"
    ]
   },
   {
@@ -137,12 +158,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../../data/avltruck/avl_infos_val.pkl', 'rb') as f:\n",
+    "with open('../../data/avltruck/avl_infos_train.pkl', 'rb') as f:\n",
     "    avl_infos = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_det_dict = {}\n",
+    "for avl_info in avl_infos:\n",
+    "    num_det = len(avl_info[\"annos\"][\"name\"])\n",
+    "    frame_id = avl_info[\"point_cloud\"][\"lidar_idx\"]\n",
+    "    if num_det in num_det_dict:\n",
+    "        num_det_dict[num_det] +=  [frame_id]\n",
+    "    else:\n",
+    "        num_det_dict[num_det] = [frame_id]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['sequences/MinorRoad_dgt_2021-11-03-11-50-37_0_s0/dataset/logical_frame_000005.json',\n",
+       " 'sequences/MinorRoad_dgt_2021-11-03-11-50-37_0_s0/dataset/logical_frame_000001.json',\n",
+       " 'sequences/MinorRoad_dgt_2021-11-03-11-50-37_0_s0/dataset/logical_frame_000002.json',\n",
+       " 'sequences/MinorRoad_dgt_2021-11-03-11-50-37_0_s0/dataset/logical_frame_000004.json',\n",
+       " 'sequences/MinorRoad_dgt_2021-11-03-11-50-37_0_s0/dataset/logical_frame_000006.json',\n",
+       " 'sequences/MinorRoad_dgt_2021-11-03-11-50-37_0_s0/dataset/logical_frame_000003.json',\n",
+       " 'sequences/MinorRoad_dgt_2021-11-04-11-46-20_0_s0/dataset/logical_frame_000016.json',\n",
+       " 'sequences/MinorRoad_dgt_2021-11-04-11-46-20_0_s0/dataset/logical_frame_000018.json',\n",
+       " 'sequences/MinorRoad_dgt_2021-11-04-11-46-20_0_s0/dataset/logical_frame_000017.json',\n",
+       " 'sequences/MinorRoad_dgt_2021-11-04-11-46-20_0_s0/dataset/logical_frame_000020.json',\n",
+       " 'sequences/MinorRoad_dgt_2021-11-04-11-46-20_0_s0/dataset/logical_frame_000019.json',\n",
+       " 'sequences/MinorRoad_dgt_2021-11-03-12-59-27_0_s0/dataset/logical_frame_000005.json',\n",
+       " 'sequences/MinorRoad_dgt_2021-11-03-12-59-27_0_s0/dataset/logical_frame_000001.json',\n",
+       " 'sequences/MinorRoad_dgt_2021-11-03-12-59-27_0_s0/dataset/logical_frame_000002.json',\n",
+       " 'sequences/MinorRoad_dgt_2021-11-03-12-59-27_0_s0/dataset/logical_frame_000004.json',\n",
+       " 'sequences/MinorRoad_dgt_2021-11-03-12-59-27_0_s0/dataset/logical_frame_000003.json',\n",
+       " 'sequences/PrimaryHighway_dgt_2021-07-23-11-53-02_0_s0/dataset/logical_frame_000008.json',\n",
+       " 'sequences/PrimaryHighway_dgt_2021-07-23-11-53-02_0_s0/dataset/logical_frame_000007.json',\n",
+       " 'sequences/PrimaryHighway_dgt_2021-07-23-11-53-02_0_s0/dataset/logical_frame_000005.json',\n",
+       " 'sequences/PrimaryHighway_dgt_2021-07-23-11-53-02_0_s0/dataset/logical_frame_000001.json',\n",
+       " 'sequences/PrimaryHighway_dgt_2021-07-23-11-53-02_0_s0/dataset/logical_frame_000002.json',\n",
+       " 'sequences/PrimaryHighway_dgt_2021-07-23-11-53-02_0_s0/dataset/logical_frame_000004.json',\n",
+       " 'sequences/PrimaryHighway_dgt_2021-07-23-11-53-02_0_s0/dataset/logical_frame_000006.json',\n",
+       " 'sequences/PrimaryHighway_dgt_2021-07-23-11-53-02_0_s0/dataset/logical_frame_000003.json',\n",
+       " 'sequences/SecondaryHighway_dgt_2021-07-29-11-46-58_0_s0/dataset/logical_frame_000008.json',\n",
+       " 'sequences/SecondaryHighway_dgt_2021-07-29-11-46-58_0_s0/dataset/logical_frame_000007.json',\n",
+       " 'sequences/SecondaryHighway_dgt_2021-07-29-11-46-58_0_s0/dataset/logical_frame_000005.json',\n",
+       " 'sequences/SecondaryHighway_dgt_2021-07-29-11-46-58_0_s0/dataset/logical_frame_000001.json',\n",
+       " 'sequences/SecondaryHighway_dgt_2021-07-29-11-46-58_0_s0/dataset/logical_frame_000002.json',\n",
+       " 'sequences/SecondaryHighway_dgt_2021-07-29-11-46-58_0_s0/dataset/logical_frame_000004.json',\n",
+       " 'sequences/SecondaryHighway_dgt_2021-07-29-11-46-58_0_s0/dataset/logical_frame_000006.json',\n",
+       " 'sequences/SecondaryHighway_dgt_2021-07-29-11-46-58_0_s0/dataset/logical_frame_000003.json']"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num_det_dict[0]"
    ]
   },
   {
@@ -186,22 +274,70 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### AVLRooftop infos"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('../../data/avlrooftop/avl_infos_train.pkl', 'rb') as f:\n",
+    "    avl_infos = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_det_dict = {}\n",
+    "for avl_info in avl_infos:\n",
+    "    num_det = len(avl_info[\"annos\"][\"name\"])\n",
+    "    frame_id = avl_info[\"point_cloud\"][\"lidar_idx\"]\n",
+    "    if num_det in num_det_dict:\n",
+    "        num_det_dict[num_det] +=  [frame_id]\n",
+    "    else:\n",
+    "        num_det_dict[num_det] = [frame_id]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0,)"
+       "['sequences/INTERURBAN_Normal_road_20200519092930_1/unpacked/lidar/0001.pkl',\n",
+       " 'sequences/INTERURBAN_Normal_road_20200519092930_1/unpacked/lidar/0002.pkl',\n",
+       " 'sequences/INTERURBAN_Normal_roundabout_20200505103638/unpacked/lidar/0023.pkl',\n",
+       " 'sequences/INTERURBAN_Normal_roundabout_20200505103638/unpacked/lidar/0026.pkl',\n",
+       " 'sequences/INTERURBAN_Normal_roundabout_20200505103638/unpacked/lidar/0019.pkl',\n",
+       " 'sequences/INTERURBAN_Normal_roundabout_20200505103638/unpacked/lidar/0025.pkl',\n",
+       " 'sequences/INTERURBAN_Normal_roundabout_20200505103638/unpacked/lidar/0021.pkl',\n",
+       " 'sequences/INTERURBAN_Normal_roundabout_20200505103638/unpacked/lidar/0027.pkl',\n",
+       " 'sequences/INTERURBAN_Normal_roundabout_20200505103638/unpacked/lidar/0028.pkl',\n",
+       " 'sequences/INTERURBAN_Normal_roundabout_20200505103638/unpacked/lidar/0029.pkl',\n",
+       " 'sequences/INTERURBAN_Normal_roundabout_20200505103638/unpacked/lidar/0022.pkl',\n",
+       " 'sequences/INTERURBAN_Normal_roundabout_20200505103638/unpacked/lidar/0024.pkl',\n",
+       " 'sequences/INTERURBAN_Normal_roundabout_20200505103638/unpacked/lidar/0020.pkl',\n",
+       " 'sequences/INTERURBAN_Normal_roundabout_20200505103638/unpacked/lidar/0030.pkl']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "num_det_dict[1]"
+   ]
   }
  ],
  "metadata": {
@@ -220,7 +356,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.13"
   },
   "orig_nbformat": 4
  },
